# bootleg_test

client/: Cargo.toml  README.md  index.html  textfile.txt
client/src/: main.rs  networking.rs
client/wasm/: client.d.ts  client.js  client_bg.wasm.d.ts
server/: Cargo.toml
server/src/: main.rs
