[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    # "bevy/bevy_audio",
    # "bevy/bevy_gilrs",
    "bevy/bevy_winit",
    "bevy/render",
    # "bevy/png",
    # "bevy/hdr",
    # "bevy/vorbis",
    # "bevy/x11",
    # "bevy/filesystem_watcher",
]

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# bevy_internal = { version = "0.6.0", default-features = false, features = ["webgl"] }

[dependencies]
bevy = { version = "0.6", default-features = false }
anyhow = "1.0.4"
rand = "0.8.0"
ron = "0.7.0"
serde = { version = "1", features = ["derive"] }
bytemuck = "1.7"
# Needed to poll Task examples
futures-lite = "1.11.3"

# wasm
bootleg_networking = { git = "https://github.com/billyb2/bootleg_networking", default-features = false, features = ["web"]}
wasm-timer = "0.2.5"
